Fixed table and legend location